# my_smart_dog

./: .gitignore  CMakeLists.txt  my_smart_dog.sublime-project  my_smart_dog.sublime-workspace  package.xml  scripts.txt  scrypts.txt
arduino/MC33926/: UserGuideURL.txt  www.dropbox.com.url
arduino/dogino/: CarHandle.cpp  CarHandle.h  CarRemoteIR.cpp  CarRemoteIR.h  Compass.h  DualMC33926MotorShield.cpp  DualMC33926MotorShield.h  HMC5883L.h  dogino.ino
arduino/dogino.ino/: dogino.ino.ino
arduino/dogir/: CarHandle.h  Compass.cpp  HMC5883L.cpp  dogino.ino
arduino/msgDriving/: SDMsgDriving.h  SDMsgEcho.h  SDMsgLogger.h  msgDriving.ino
launch/: union.launch
msg/: msgDriving.msg  msgDrivingInfo.msg
python/: add_two_ints_client.py  add_two_ints_server.py
src/: MDLegsPublisher.cpp  MDLegsServiceClient.cpp  MDLegsServiceServer.cpp  MDLegsSubscriber.cpp
web/: drivingController.py  hello_flask.py  rosDriving.py
web/templates/: main.html
